@@ -81,6 +81,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19227: Try to fix deadlocks caused by re-seeding then OpenSSL
+  pseudo-random number generator on fork().
+
 - Issue #16037: HTTPMessage.readheaders() raises an HTTPException when more than
   100 headers are read.  Adapted from patch by Jyrki Pulliainen.
 
